update semua isi project

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <li class="nav-item"><a class="nav-link" href="#Profile">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="#sertifikat">Portfolio</a></li>
       <li class="nav-item"><a class="nav-link" href="#contact-cta">Contact</a></li>
-      <li class="nav-item"><a class="nav-link" href="/Activity">Activity</a></li>
+      <li class="nav-item"><a class="nav-link" href="kegiatan.html">Activity</a></li>
     </ul>
-      <a href="/Contact" class="btn-nav-hire d-none d-lg-inline-block">Hire Me</a>
+      <a href="#contact" class="btn-nav-hire d-none d-lg-inline-block">Hire Me</a>
     </div>
   </div>
 </nav>
@@ -59,8 +59,8 @@
         </div>
 
         <div class="button-container justify-content-center">
-          <a href="/Curiculum-Vitae" class="btn btn-primary">View My Resume</a>
-          <a href="/Contact" class="btn btn-secondary">Let’s Connect</a>
+          <a href="Curiculum-Vitae" class="btn btn-primary">View My Resume</a>
+          <a href="#contact" class="btn btn-secondary">Let’s Connect</a>
         </div>
 
       </div>
