update semua isi project

--- a/kegiatan.html
+++ b/kegiatan.html
@@ -349,12 +349,12 @@
 
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav mx-auto">
-      <li class="nav-item"><a class="nav-link" href="/Home">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="#sertifikat">Portfolio</a></li>
       <li class="nav-item"><a class="nav-link" href="#contact-cta">Contact</a></li>
       <li class="nav-item"><a class="nav-link" href="#gsa-highlights">Activity</a></li>
     </ul>
-      <a href="/Contact" class="btn-nav-hire d-none d-lg-inline-block">Hire Me</a>
+      <a href="index.html/#contact" class="btn-nav-hire d-none d-lg-inline-block">Hire Me</a>
     </div>
   </div>
 </nav>
