update semua isi project

--- a/kegiatan.html
+++ b/kegiatan.html
@@ -529,7 +529,7 @@
                     <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
                     <a href="#" class="social-link"><i class="bi bi-envelope-at"></i></a>
                 </div>
-                <p class="small mt-5 opacity-50">© 2026 Aksana Zachri Satria | Purwokerto, Indonesia</p>
+                <p class="small mt-5 opacity-50">© 2026 Alysha Maharani</p>
             </div>
         </div>
     </div>
