update semua isi project

--- a/index.html
+++ b/index.html
@@ -178,30 +178,30 @@
             <div class="path-item" data-aos="fade-left">
                 <div class="path-dot" style="background: var(--google-blue); border-color: var(--google-blue);"><i class="bi bi-people-fill"></i></div>
                 <div class="path-info info-right">
-                    <span class="path-year" style="color: var(--google-blue);">2024 — Present</span>
-                    <h4 class="path-title">Student Executive Board (BEM)</h4>
-                    <p class="path-desc">Head of Creative Media Division</p>
-                    <div class="path-impact" style="color: var(--google-blue);">Leading 10+ creators to redefine campus visual communications.</div>
+                    <span class="path-year" style="color: var(--google-blue);">2024 — 2025</span>
+                    <h4 class="path-title">PEMA (Pemerintahan Mahasiswa)</h4>
+                    <p class="path-desc">Member of the Talent and Interests Division</p>
+                    <div class="path-impact" style="color: var(--google-blue);">•	Contributed to the planning and execution of division programs, ensuring smooth implementation of organizational activities.</div>
                 </div>
             </div>
 
             <div class="path-item" data-aos="fade-right">
-                <div class="path-dot" style="background: var(--google-red); border-color: var(--google-red);"><i class="bi bi-megaphone-fill"></i></div>
+                <div class="path-dot" style="background: var(--google-red); border-color: var(--google-red);"><i class="bi bi-people-fill"></i></div>
                 <div class="path-info info-left">
-                    <span class="path-year" style="color: var(--google-red);">2023</span>
-                    <h4 class="path-title">National Health Seminar</h4>
-                    <p class="path-desc">Lead Digital Coordinator</p>
-                    <div class="path-impact" style="color: var(--google-red);">Streamlined digital workflows for over 500 participants.</div>
+                    <span class="path-year" style="color: var(--google-red);">2026 - 2027</span>
+                    <h4 class="path-title">HIMA (Student Association)</h4>
+                    <p class="path-desc">President</p>
+                    <div class="path-impact" style="color: var(--google-red);">Led and coordinated the entire organizational structure, ensuring effective operations across all departments</div>
                 </div>
             </div>
 
             <div class="path-item" data-aos="fade-left">
                 <div class="path-dot" style="background: var(--google-yellow); border-color: var(--google-yellow);"><i class="bi bi-stars"></i></div>
                 <div class="path-info info-right">
-                    <span class="path-year" style="color: var(--google-yellow);">2024</span>
-                    <h4 class="path-title">Google Community Enthusiast</h4>
-                    <p class="path-desc">Digital Literacy & Tech Advocate</p>
-                    <div class="path-impact" style="color: var(--google-yellow);">Integrating Google Workspace solutions for organization efficiency.</div>
+                    <span class="path-year" style="color: var(--google-yellow);">2025</span>
+                    <h4 class="path-title">Regional Medical Olympiad (RMO)</h4>
+                    <p class="path-desc">Competition Committee</p>
+                    <div class="path-impact" style="color: var(--google-yellow);">Assisted in developing competition guidelines, schedules, and technical requirements.</div>
                 </div>
             </div>
 
@@ -290,22 +290,22 @@
 
         <!-- ========== CERT 1 ========== -->
         <div class="cert-item">
-          <a href="https://example.com/cert-1" class="cert-anchor" target="_blank">
+          <a href="#" class="cert-anchor" target="_blank">
             <div class="cert-modern-card">
 
               <div class="cert-img-holder">
-                <img src="/assets/certificates/cert1.jpg" alt="UI/UX Fundamentals">
+                <img src="img/dedikasi hari disabilitas.jpg" alt="UI/UX Fundamentals">
                 <div class="cert-badge-floating">Verify Credential</div>
               </div>
 
               <div class="cert-info">
-                <span class="cert-org">Google</span>
-                <h3 class="cert-name">UI/UX Design Fundamentals</h3>
+                <span class="cert-org">PINTI</span>
+                <h3 class="cert-name">Hari disabilitas nasional</h3>
 
                 <div class="cert-footer">
                   <span class="cert-date">
                     <i class="bi bi-calendar3 me-1"></i>
-                    Jan 2024
+                    Des 2024
                   </span>
                   <div class="cert-arrow">
                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 16 16">
@@ -321,22 +321,22 @@
 
         <!-- ========== CERT 2 ========== -->
         <div class="cert-item">
-          <a href="https://example.com/cert-2" class="cert-anchor" target="_blank">
+          <a href="#" class="cert-anchor" target="_blank">
             <div class="cert-modern-card">
 
               <div class="cert-img-holder">
-                <img src="/assets/certificates/cert2.jpg" alt="Frontend Course">
+                <img src="img/garuda-science.jpg" alt="Frontend Course">
                 <div class="cert-badge-floating">Verify Credential</div>
               </div>
 
               <div class="cert-info">
-                <span class="cert-org">Dicoding</span>
-                <h3 class="cert-name">Belajar Frontend Web Developer</h3>
+                <span class="cert-org">Garuda Sains Indonesia/span>
+                <h3 class="cert-name">Olimpiade Fisika Tingkat Nasional</h3>
 
                 <div class="cert-footer">
                   <span class="cert-date">
                     <i class="bi bi-calendar3 me-1"></i>
-                    Oct 2023 – Dec 2023
+                    Apr 2022
                   </span>
                   <div class="cert-arrow">
                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"><path d="..."/></svg>
@@ -354,18 +354,74 @@
             <div class="cert-modern-card">
 
               <div class="cert-img-holder">
-                <img src="/assets/certificates/cert3.jpg" alt="Figma Masterclass">
+                <img src="img/olimpiade.jpg" alt="Figma Masterclass">
                 <div class="cert-badge-floating">Verify Credential</div>
               </div>
 
               <div class="cert-info">
-                <span class="cert-org">BuildWithAngga</span>
-                <h3 class="cert-name">Figma UI/UX Masterclass</h3>
+                <span class="cert-org">Puskanas</span>
+                <h3 class="cert-name">Olimpiade Sains Tingkat Nasional</h3>
 
                 <div class="cert-footer">
                   <span class="cert-date">
                     <i class="bi bi-calendar3 me-1"></i>
-                    Jul 2022
+                    Apr 2023
+                  </span>
+                  <div class="cert-arrow">
+                    <svg width="14" height="14"><path d="..."/></svg>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </a>
+        </div>
+        <!-- ========== CERT 3 ========== -->
+        <div class="cert-item">
+          <a href="#" class="cert-anchor" target="_blank">
+            <div class="cert-modern-card">
+
+              <div class="cert-img-holder">
+                <img src="img/IMG-20260225-WA0014.jpg" alt="Figma Masterclass">
+                <div class="cert-badge-floating">Verify Credential</div>
+              </div>
+
+              <div class="cert-info">
+                <span class="cert-org">Puskanas</span>
+                <h3 class="cert-name">Olimpiade Sains Tingkat Nasional</h3>
+
+                <div class="cert-footer">
+                  <span class="cert-date">
+                    <i class="bi bi-calendar3 me-1"></i>
+                    Apr 2023
+                  </span>
+                  <div class="cert-arrow">
+                    <svg width="14" height="14"><path d="..."/></svg>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </a>
+        </div>
+        <!-- ========== CERT 3 ========== -->
+        <div class="cert-item">
+          <a href="#" class="cert-anchor" target="_blank">
+            <div class="cert-modern-card">
+
+              <div class="cert-img-holder">
+                <img src="img/Scout leader.jpg" alt="Figma Masterclass">
+                <div class="cert-badge-floating">Verify Credential</div>
+              </div>
+
+              <div class="cert-info">
+                <span class="cert-org"></span>
+                <h3 class="cert-name">Scout Leader</h3>
+
+                <div class="cert-footer">
+                  <span class="cert-date">
+                    <i class="bi bi-calendar3 me-1"></i>
+                    Des 2022
                   </span>
                   <div class="cert-arrow">
                     <svg width="14" height="14"><path d="..."/></svg>
@@ -382,7 +438,7 @@
 
     <!-- LinkedIn CTA -->
     <div class="linkedin-cta text-center mt-5">
-      <a href="https://www.linkedin.com/in/aksanazachri" target="_blank" class="linkedin-btn">
+      <a href="https://www.linkedin.com/in/alysha-maharani-lubis-60a0283b3/" target="_blank" class="linkedin-btn">
         <span class="btn-content">
           <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="20" class="me-2">
           Discover more on LinkedIn
@@ -406,17 +462,17 @@
         </p>
 
         <div class="cta-buttons">
-          <a href="#" target="_blank" class="cta-btn linkedin">
+          <a href="https://www.linkedin.com/in/alysha-maharani-lubis-60a0283b3/" target="_blank" class="cta-btn linkedin">
             <div class="btn-icon"><i class="bi bi-linkedin"></i></div>
             <span>LinkedIn</span>
           </a>
 
-          <a href="https://wa.me/628XXXXXXXXX" target="_blank" class="cta-btn whatsapp">
+          <a href="https://wa.me/6282173358282" target="_blank" class="cta-btn whatsapp">
             <div class="btn-icon"><i class="bi bi-whatsapp"></i></div>
             <span>WhatsApp</span>
           </a>
 
-          <a href="#" class="cta-btn email">
+          <a href="mailto:alyshamlml44@gmail.com" class="cta-btn email">
             <div class="btn-icon"><i class="bi bi-envelope-heart-fill"></i></div>
             <span>Email Me</span>
           </a>
@@ -439,9 +495,8 @@
         </p>
         <div class="footer-social">
           <a href="#" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
-          <a href="#" target="_blank" title="WhatsApp"><i class="bi bi-whatsapp"></i></a>
-          <a href="#" target="_blank" title="Behance"><i class="bi bi-behance"></i></a>
+          <a href="https://www.linkedin.com/in/alysha-maharani-lubis-60a0283b3/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+          <a href="https://wa.me/6282173358282" target="_blank" title="WhatsApp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
 
