--- a/kegiatan.html
+++ b/kegiatan.html
@@ -387,24 +387,38 @@
         </div>
         <div class="gallery-grid">
             <div class="gallery-item wide" data-aos="zoom-in">
-                <img src="img/gallery1.jpg" alt="Lab">
+                <img src="img//bakti sosial.jpg" alt="Lab">
                 <div class="gallery-overlay">
-                    <h5 class="fw-bold">Clinical Discipline</h5>
-                    <p class="small mb-0">Melatih akurasi klinis sebagai pondasi profesionalisme medis.</p>
+                    <h5 class="fw-bold">Bakti Sosial</h5>
+                    <p class="small mb-0">Melatih sosialisasi dengan warga sekitar</p>
                 </div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-                <img src="img/gallery2.jpg" alt="Organization">
+                <img src="img//basic clinical.jpg" alt="Organization">
                 <div class="gallery-overlay">
-                    <h5 class="fw-bold">Leading Teams</h5>
+                    <h5 class="fw-bold">Basic Clinical</h5>
                     <p class="small mb-0">Berkolaborasi lintas divisi untuk mencapai target komunitas.</p>
                 </div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-                <img src="img/gallery3.jpg" alt="Outreach">
+                <img src="img/sosialisasi kemahasiswaan.jpg" alt="Outreach">
                 <div class="gallery-overlay">
-                    <h5 class="fw-bold">Health Outreach</h5>
-                    <p class="small mb-0">Edukasi kesehatan langsung ke masyarakat.</p>
+                    <h5 class="fw-bold">Sosialisasi kemahasiswaan</h5>
+                    <p class="small mb-0">Menjalin kekeluargaan antar mahasiswa dalam kampus. </p>
+                </div>
+            </div>
+            <div class="gallery-item wide" data-aos="zoom-in">
+                <img src="img/organisasi PEMA.JPG" alt="Lab">
+                <div class="gallery-overlay">
+                    <h5 class="fw-bold">Organisasi PEMA</h5>
+                    <p class="small mb-0">Pertemuan dengan sesama anggota PEMA guna memperkuat silaturahmi</p>
+                </div>
+            </div>
+            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
+                <img src="img/sosialisasi-masyarakat.jpeg" alt="Outreach">
+                <div class="gallery-overlay">
+                    <h5 class="fw-bold">Sosialisasi Masyarakat</h5>
+                    <p class="small mb-0">Menjalin kekeluargaan dan kominitas dengan kampus.</p>
                 </div>
             </div>
         </div>
@@ -424,67 +438,30 @@
             <div class="col-lg-6" data-aos="fade-up">
                 <div class="activity-card shadow-sm">
                     <div class="icon-circle text-primary"><i class="bi bi-pencil-square"></i></div>
-                    <h3 class="fw-bold mb-3">Creative Media Lead</h3>
-                    <p class="text-muted small">Mengelola branding visual organisasi. Dari desain feed hingga publikasi fisik, saya belajar manajemen aset dan deadline ketat.</p>
-                    <div class="mt-4 pt-3 border-top small fw-bold text-primary">Managed 10+ Creators & 50+ Visual Campaigns</div>
+                    <h3 class="fw-bold mb-3">HIMA (Student Association) Lead</h3>
+                    <p class="text-muted small">Memimpin dan juga berkolaborasi dalam menjalankan sebuah organisasi yang baik</p>
+                    <div class="mt-4 pt-3 border-top small fw-bold text-primary">•	Led and coordinated the entire organizational structure, ensuring effective operations across all departments.</div>
                 </div>
             </div>
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="activity-card shadow-sm">
-                    <div class="icon-circle text-danger"><i class="bi bi-cpu-fill"></i></div>
-                    <h3 class="fw-bold mb-3">Tech-Sync Coordinator</h3>
-                    <p class="text-muted small">Mengintegrasikan Google Workspace untuk manajemen data peserta seminar nasional, memangkas waktu pendaftaran secara signifikan.</p>
-                    <div class="mt-4 pt-3 border-top small fw-bold text-danger">Increased Workflow Efficiency by 40%</div>
+                    <div class="icon-circle text-danger"><i class="bi bi-trophy-fill"></i></div>
+                    <h3 class="fw-bold mb-3">Regional Medical Olympiad (RMO) Committee</h3>
+                    <p class="text-muted small">Menjadi panitia dalam sebuah acara olimpiade medis dalam jenjang Regional.</p>
+                    <div class="mt-4 pt-3 border-top small fw-bold text-danger">Coordinated with judges, participants, and internal divisions to ensure smooth and fair competition flow.</div>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section id="showcase" class="py-5">
-    <div class="container py-5">
-        <div class="text-center mb-5" data-aos="fade-up">
-            <span class="story-label">Chapter 03</span>
-            <h2 class="story-heading">Creative Showcase.</h2>
-            <p class="text-muted">Kumpulan karya desain visual yang saya kembangkan untuk kebutuhan branding dan kampanye digital.</p>
-        </div>
-        <div class="row g-4">
-            <div class="col-md-4" data-aos="zoom-in">
-                <div class="gallery-item" style="height: 400px;">
-                    <img src="img/design1.jpg" alt="UIUX Design">
-                    <div class="gallery-overlay">
-                        <h5 class="fw-bold">UI/UX Exploration</h5>
-                        <p class="small mb-0">Eksplorasi antarmuka aplikasi kesehatan yang intuitif.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
-                <div class="gallery-item" style="height: 400px;">
-                    <img src="img/design2.jpg" alt="Poster">
-                    <div class="gallery-overlay">
-                        <h5 class="fw-bold">Visual Campaign</h5>
-                        <p class="small mb-0">Branding visual untuk acara seminar kesehatan nasional.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
-                <div class="gallery-item" style="height: 400px;">
-                    <img src="img/design3.jpg" alt="Graphic">
-                    <div class="gallery-overlay">
-                        <h5 class="fw-bold">Graphic Identity</h5>
-                        <p class="small mb-0">Pembuatan logo dan aset identitas organisasi mahasiswa.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 
 <section id="vision" class="py-5" style="background: var(--rose-soft);">
     <div class="container py-5">
         <div class="row align-items-center">
             <div class="col-lg-6" data-aos="fade-right">
-                <span class="story-label" style="color: var(--google-blue);">Chapter 04</span>
+                <span class="story-label" style="color: var(--google-blue);">Chapter 03</span>
                 <h2 class="story-heading">Community Vision.</h2>
                 <p class="text-muted">Misi saya adalah mematahkan stigma bahwa mahasiswa kesehatan tidak perlu melek teknologi. Saya ingin menjadi jembatan literasi digital medis.</p>
             </div>
@@ -507,11 +484,15 @@
         <span class="story-label">Chapter 05</span>
         <h2 class="story-heading">The Toolstack.</h2>
         <div class="col-lg-10 mx-auto" data-aos="fade-up">
-            <span class="skill-tag shadow-sm">Figma (UI/UX)</span>
-            <span class="skill-tag shadow-sm">Adobe Creative Suite</span>
+            <span class="skill-tag shadow-sm">Zoom/Google Meet</span>
+            <span class="skill-tag shadow-sm">Basic Clinical Examination</span>
+            <span class="skill-tag shadow-sm">Event Coordination</span>
             <span class="skill-tag shadow-sm">Google Workspace</span>
-            <span class="skill-tag shadow-sm">Brand Identity</span>
-            <span class="skill-tag shadow-sm">Community Leadership</span>
+            <span class="skill-tag shadow-sm">Canva</span>
+            <span class="skill-tag shadow-sm">Microsoft Word</span>
+            <span class="skill-tag shadow-sm">Communication</span>
+            <span class="skill-tag shadow-sm">Team management</span>
+            <span class="skill-tag shadow-sm">Leadership</span>
             <span class="skill-tag shadow-sm">Public Speaking</span>
         </div>
     </div>
@@ -526,8 +507,8 @@
                 <a href="mailto:aksana@example.com" class="btn btn-light rounded-pill px-5 py-3 fw-bold shadow-lg">Start a Conversation</a>
                 <div class="mt-5 pt-5 border-top border-secondary d-flex justify-content-center gap-3">
                     <a href="#" class="social-link"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
-                    <a href="#" class="social-link"><i class="bi bi-envelope-at"></i></a>
+                    <a href="https://www.linkedin.com/in/alysha-maharani-lubis" class="social-link"><i class="bi bi-linkedin"></i></a>
+                    <a href="mailto:alyshamlml44@gmail.com" class="social-link"><i class="bi bi-envelope-at"></i></a>
                 </div>
                 <p class="small mt-5 opacity-50">© 2026 Alysha Maharani</p>
             </div>
