--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li class="nav-item"><a class="nav-link" href="#contact-cta">Contact</a></li>
       <li class="nav-item"><a class="nav-link" href="kegiatan.html">Activity</a></li>
     </ul>
-      <a href="#contact" class="btn-nav-hire d-none d-lg-inline-block">Hire Me</a>
+      <a href="#contact-cta" class="btn-nav-hire d-none d-lg-inline-block">Hire Me</a>
     </div>
   </div>
 </nav>
@@ -60,7 +60,7 @@
 
         <div class="button-container justify-content-center">
           <a href="Curiculum-Vitae" class="btn btn-primary">View My Resume</a>
-          <a href="#contact" class="btn btn-secondary">Let’s Connect</a>
+          <a href="#contact-cta" class="btn btn-secondary">Let’s Connect</a>
         </div>
 
       </div>
