update semua isi project

--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
         <h6>Contact</h6>
         <ul class="contact-info">
           <li><i class="bi bi-geo-alt-fill"></i> Medan, Indonesia</li>
-          <li><i class="bi bi-envelope-at-fill"></i> alysha@example.com</li>
-          <li><a href="#" class="status-badge">Available for Collab</a></li>
+          <li><i class="bi bi-envelope-at-fill"></i> alyshamlml44@gmail.com</li>
+          <li><a href="#contact-cta" class="status-badge">Available for Collab</a></li>
         </ul>
       </div>
 
